crates/client/tests/snapshots/statusline__default_status_line.snap
---
source: crates/client/tests/statusline.rs
expression: "client.screen(Size::new(40, 8))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 8 },
    content: [
        "┌──────────────────┐┌──────────────────┐",
        "│                  ││                  │",
        "│                  ││                  │",
        "│                  ││                  │",
        "│                  ││                  │",
        "│                  ││                  │",
        "└──────────────────┘└──────────────────┘",
        "band 1                               2/2",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 7, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 37, y: 7, fg: Indexed(110), bg: Indexed(236), underline: Reset, modifier: NONE,
    ]
}
