crates/client/tests/snapshots/statusline__error_item.snap
---
source: crates/client/tests/statusline.rs
expression: "client.screen(Size::new(40, 6))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 6 },
    content: [
        "error               ┌──────────────────┐",
        "band 1              │                  │",
        "C-space navigation  │                  │",
        "                    │                  │",
        "                    │                  │",
        "1/1                 └──────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(210), bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 5, y: 0, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 20, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 1, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 20, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 2, fg: Indexed(111), bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 7, y: 2, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 3, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 20, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 4, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 20, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 5, fg: Indexed(110), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 20, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
    ]
}
