crates/client/tests/snapshots/statusline__narrow_width_drops_and_cuts.snap
---
source: crates/client/tests/statusline.rs
expression: "client.screen(Size::new(16, 5))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 16, height: 5 },
    content: [
        "┌──────┐        ",
        "│      │        ",
        "│      │        ",
        "└──────┘        ",
        "a segment too l…",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
    ]
}
