crates/client/tests/snapshots/statusline__prefix_hints_cut.snap
---
source: crates/client/tests/statusline.rs
expression: "client.screen(Size::new(80, 8))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 8 },
    content: [
        "┌──────────────────────────────────────┐┌──────────────────────────────────────┐",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "└──────────────────────────────────────┘└──────────────────────────────────────┘",
        "band 1 │ navigation │ h left  l right  j down  k up  u band down …           2/2",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 7, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 6, y: 7, fg: Indexed(60), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 9, y: 7, fg: Indexed(111), bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 19, y: 7, fg: Indexed(60), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 22, y: 7, fg: Indexed(111), bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 23, y: 7, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 30, y: 7, fg: Indexed(111), bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 31, y: 7, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 39, y: 7, fg: Indexed(111), bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 40, y: 7, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 47, y: 7, fg: Indexed(111), bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 48, y: 7, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 53, y: 7, fg: Indexed(111), bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 54, y: 7, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 77, y: 7, fg: Indexed(110), bg: Indexed(236), underline: Reset, modifier: NONE,
    ]
}
