crates/client/tests/snapshots/statusline__right_placement.snap
---
source: crates/client/tests/statusline.rs
expression: "client.screen(Size::new(40, 8))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 8 },
    content: [
        "┌──────────────────┐band 1              ",
        "│                  │C-space navigation  ",
        "│                  │                    ",
        "│                  │                    ",
        "│                  │                    ",
        "│                  │                    ",
        "│                  │                    ",
        "└──────────────────┘2/2                 ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 0, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 1, fg: Indexed(111), bg: Indexed(236), underline: Reset, modifier: BOLD,
        x: 27, y: 1, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 2, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 3, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 4, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 5, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 6, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 20, y: 7, fg: Indexed(110), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 23, y: 7, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
    ]
}
