crates/client/tests/snapshots/statusline__short_terminal_drops_and_cuts.snap
---
source: crates/client/tests/statusline.rs
expression: "client.screen(Size::new(30, 2))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 2 },
    content: [
        "          ┌─────────────┐     ",
        "a segment…└─────────────┘     ",
    ],
    styles: [
        x: 0, y: 0, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 10, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Indexed(153), bg: Indexed(236), underline: Reset, modifier: NONE,
        x: 10, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
